--- a/index.html
+++ b/index.html
@@ -251,9 +251,9 @@
 </head>
 <body>
 <div id="install-box" style="display: none;">
-  <img src="icon1.png" alt="App Icon" class="app-icon">
+  <img src="icon.png" alt="App Icon" class="app-icon">
   <div class="text-section">
-    <div class="app-name">My Web App</div>
+    <div class="app-name">My kalua</div>
     <div class="app-url">nano7795.github.io</div>
   </div>
   <button id="install-btn">Install</button>
